[gd_scene load_steps=10 format=3 uid="uid://bd5awax1qkhvn"]

[ext_resource type="Script" uid="uid://82c10g467flm" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="Shader" uid="uid://bcg60g0s2778m" path="res://assets/pause_menu.gdshader" id="2_kukqi"]
[ext_resource type="AudioStream" uid="uid://bnl6ab7lvnao3" path="res://assets/OnlineSound.net SFX hitHurt (1).wav" id="3_5d2l8"]
[ext_resource type="AudioStream" uid="uid://b6t0d2vx4e7s3" path="res://assets/OnlineSound.net SFX pickupCoin.wav" id="4_7l7mv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5d2l8"]
shader = ExtResource("2_kukqi")
shader_parameter/lod = 0.0

[sub_resource type="Theme" id="Theme_uahpa"]

[sub_resource type="Animation" id="Animation_kukqi"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_myx47"]
resource_name = "blur"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0, 0.8, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5d2l8"]
_data = {
&"RESET": SubResource("Animation_kukqi"),
&"blur": SubResource("Animation_myx47")
}

[node name="pause menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myx47")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_5d2l8")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(29.1587, 16.4221)

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -264.0
offset_right = 264.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
clip_contents = true
layout_mode = 2
theme = SubResource("Theme_uahpa")
alignment = 1

[node name="resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "үргэлжлүүлэх"

[node name="retry" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "дахиж эхлэх"

[node name="quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "гарах"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5d2l8")
}

[node name="hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_5d2l8")

[node name="click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7l7mv")

[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/resume" to="." method="_on_үргэлжлүүлэх_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/retry" to="." method="_on_retry_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/retry" to="." method="_on_дахиж_эхлэх_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/retry" to="." method="_on_retry_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/quit" to="." method="_on_гарах_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
